# kontinent

./: README.md  daphne.service.ini  docker-compose.yml  dotenv_.py  pyproject.toml  pytest.ini  requirements.txt  swagger  truckdriver_db.sqlite3
.github/workflows/: main.yml
__tests__/tests_content/: conftest.py  test_content_api.py  test_serializers.py
content/: admin.py  apps.py  file_validator.py  models.py  models_content_files.py  serializers.py  tasks.py  transactions.py  urls.py  urls_api.py  views.py
content/content_api/: additionally.py  serializers.py  views_api.py
content/migrations/: 0001_initial.py  0002_videocontentmodel_video_path.py  0003_audiocontentmodel_is_active_and_more.py  0004_alter_audiocontentmodel_is_active_and_more.py  0005_alter_pagemodel_url.py  0006_alter_videocontentmodel_video_url.py  0007_alter_videocontentmodel_subtitles_url_and_more.py  0008_audiocontentmodel_audio_path_and_more.py  0009_alter_audiocontentmodel_audio_path.py  0010_audiocontentmodel_upload_status_and_more.py
nginx/: default.conf
project/: asgi.py  celery.py  celeryconfig.py  settings.py  urls.py  urls_api.py
templates/layout/: index.html
